adicionador-a-imagem-minha

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <a href="#sobre-mim">Sobre mim</a>
   <a href="#pagina">Página que eu gosto</a>
   <h1>Werlley Batista</h1>
-  <img src="WhatsApp Image 2023-04-14 at 09.53.24.j" alt="Tranquilão com a camisa azul do cruzeirão" id="foto">
-  <p class="descricao">E aí, galera! Meu nome é <strong>werlley </strong> e eu sou fissurado em tecnologia, <strong>viciado em videogames</strong> e fanático por futebol. No meu portfólio, você pode ver como eu gosto de me desafiar e como minha paixão por essas coisas me levou a projetos incríveis.
+  <img src="WhatsApp Image 2023-04-14 at 09.53.24.jpeg" width="250px" alt="Tranquilão com a camisa azul do cruzeirão" id="foto">
+  <br>
+  <br>
+
+  <a href="https://www.linkedin.com/in/werlley-bastista-538aa3272/" target="_blank"><h2>LinkedIn</h2></a>
+  <p>E aí, galera! Meu nome é <strong>werlley </strong> e eu sou fissurado em tecnologia, <strong>viciado em videogames</strong> e fanático por futebol. No meu portfólio, você pode ver como eu gosto de me desafiar e como minha paixão por essas coisas me levou a projetos incríveis.
 Desde jovem, eu sempre adorei explorar diferentes tecnologias e jogar videogames. E, claro, não posso deixar de falar sobre minha paixão pelo futebol - esse jogo é meu amor eterno! Mas o que eu aprendi é que tanto a tecnologia quanto o futebol exigem muita criatividade, habilidade e estratégia para se destacar.</p>
   <p><strong>Eunápolis - Bahia</strong></p>
   <h2>Lista de habilidades</h2>
