css-no-postofolio

--- a/index.html
+++ b/index.html
@@ -5,20 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio Web</title>
+  <link rel="stylesheet" href="./index2.html">
 </head>
-<style>
-  h1 {font-family: monospace;}
-  body{background-color: green;}
-
-#sobremim {font-family: 'Courier New', Courier, monospace;}
-
-.vdg{font-size: 12px;}
-.trabalho-equipe{font-size: 25px;}
-.comunicação {font-size: 32px;}
-.flex {font-size: 16px;}
-.cabuloso {font-size: 48px;}
-
-</style>
 <body>
   <a href="#sobre-mim">Sobre mim</a>
   <a href="#pagina">Página que eu gosto</a>
